created form using form_tag helper method

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
-<form accept-charset="UTF-8" method="POST" action="/users">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <input type="text" name="user[username]">Username
-  <input type="email" name="user[email]">Email
-  <input type="password" name="user[password]">Password
-  <input type="submit" value="Submit this form">
-</form>
+<%= form_tag("/users", method: "post") do %>
+  <%= label_tag(:username, "Username:") %>
+  <%= text_field_tag(:username) %>
+  <%= label_tag(:email, "Email:") %>
+  <%= text_field_tag(:email) %>
+  <%= label_tag(:password, "Password:") %>
+  <%= text_field_tag(:password) %>
+  <%= submit_tag("Create User") %>
+<% end %>
