forms project complete

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @user , url: users_path do |u| %>
+<%= form_with model: @user do |u| %>
   <%= u.label :username %>
   <%= u.text_field :username %> <br />
 
@@ -9,4 +9,4 @@
   <%= u.text_field :password %> <br />
 
   <%= u.submit %>
-<% end %>
+<% end %>ads
